<resources>
    <string name="app_name">奶爸听差</string>
    <string name="your_info">您的基本信息</string>
    <string name="name">姓名</string>
    <string name="input_your_name">输入姓名</string>
    <string name="age">生日</string>
    <string name="input_age">选择生日</string>
    <string name="role">角色</string>
    <string name="papa">爸爸</string>
    <string name="mama">妈妈</string>
    <string name="grandpa">爷爷/外公</string>
    <string name="grandma">奶奶/外婆</string>
    <string name="other">其他</string>
    <string name="your_account">您的帐号信息</string>
    <string name="phone_number">手机号码</string>
    <string name="input_phone">输入手机号</string>
    <string name="input_verification_code">输入验证码</string>
    <string name="complete">完成</string>
    <string name="verification_code">获取验证码</string>
    <string name="baby_info">宝宝的基本信息</string>
    <string name="sex">性别</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="take_photo">拍照</string>
    <string name="pick_photo">本地相册</string>
    <string name="cancel">取消</string>

    <string name="switch_tibei_hint">请注意使用该功能时,请保持环境中有一定光源,该功能的核心元件为光敏传感器,在过暗环境下,可能导致该功能无法正常使用</string>
    <string name="update_hint">(设备及功能将持续更新,请关注版本更新)</string>
    <string name="distance_hint">请注意避免手机与设备间存在太多障碍,这会导致报警提示过于频繁及不准确,您可以将设备放置于宝宝的口袋或遮挡较少的位置,以提高提示的准确性</string>
</resources>
