<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_take_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:text="@string/take_photo"
        android:textSize="14sp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#fafafa"
        />
    <Button
        android:id="@+id/btn_pick_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:text="@string/pick_photo"
        android:textSize="14sp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#fafafa"
        />
    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:text="@string/cancel"
        android:textSize="14sp"
        android:textColor="@color/button_background"/>


</LinearLayout>
