<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context="com.drkj.wishfuldad.activity.SetYourInfoActivity">

    <ImageView
        android:id="@+id/image_back"
        android:layout_width="10dp"
        android:layout_height="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/your_account"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/phone_number"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/et_input_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/input_phone"
        android:textCursorDrawable="@drawable/et_cursor_color"
        android:background="@drawable/et_underline_selector"
        android:inputType="phone"
        android:maxLength="20"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_input_verification_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/input_verification_code"
            android:inputType="number"
            android:textCursorDrawable="@drawable/et_cursor_color"
            android:background="@drawable/et_underline_selector"
            android:maxLength="20"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_get_verification_code"
            android:layout_width="120dp"
            android:layout_height="25dp"
            android:layout_marginStart="20dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/shape_corner_verification_code"
            android:text="@string/verification_code"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        >
        <Button
            android:id="@+id/btn_complete"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape_circle_button"
            android:text="@string/complete"
            android:textColor="@color/white"
            android:textSize="14sp"/>
    </RelativeLayout>


</LinearLayout>
