<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context="com.drkj.wishfuldad.activity.SetYourInfoActivity">

    <ImageView
        android:id="@+id/image_back"
        android:layout_width="10dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:src="@drawable/ic_back"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/your_info"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        android:text="@string/name"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/et_input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="20"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:textCursorDrawable="@drawable/et_cursor_color"
        android:background="@drawable/et_underline_selector"
        android:textSize="14sp"
        android:inputType="text"
        android:hint="@string/input_your_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/age"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/et_input_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="20"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:inputType="number"
        android:textCursorDrawable="@drawable/et_cursor_color"
        android:background="@drawable/et_underline_selector"
        android:hint="@string/input_age"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/role"
        android:textColor="@color/black"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/image_button_papa"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_head_papa_selector"
                android:scaleType="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/papa"
                android:textSize="10sp"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true">
            <ImageButton
                android:id="@+id/image_button_mama"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="center"
                android:background="@drawable/button_head_mama_selector"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/mama"
                android:textSize="10sp"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentEnd="true">
            <ImageButton
                android:id="@+id/image_button_grandpa"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_head_grandpa_selector"
                android:scaleType="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/grandpa"
                android:textSize="10sp"
                android:textColor="@color/black"/>
        </LinearLayout>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/image_button_grandma"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_head_grandma_selector"
                android:scaleType="center"
                 />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/grandma"
                android:textSize="10sp"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true">
            <ImageButton
                android:id="@+id/image_button_other"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_head_other_selector"
                android:scaleType="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/other"
                android:textSize="10sp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/image_next_step"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/shape_circle_button"
            android:src="@drawable/ic_next_step"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

</LinearLayout>
